# wafer-ssl

./: .gitignore  LICENSE  PLAN.md  README.md  pyproject.toml
configs/: pretrain.yaml
scripts/: plot_pretrain_loss.py  run_control_ensemble.sh  run_phases_qr.sh
src/wafer_ssl/: __init__.py  ensemble.py  pretrain.py
tests/: test_ensemble.py  test_pretrain.py
